correct vert spacing replace dangerouslySetInnerHTML with fragments modularize highlight color in prep for options we haven't considered yet

--- a/src/components/layouts/express/express.module.scss
+++ b/src/components/layouts/express/express.module.scss
@@ -34,7 +34,7 @@
 }
 
 .hwcta {
-  margin: 35px 8.33% 120px;
+  margin: 100px 8.33% 120px;
 }
 
 @media (min-width: $tablet) and (max-width: $desktop-xl - 1) {
@@ -47,7 +47,7 @@
   }
 
   .hwcta {
-    margin-top: -20px;
+    margin-top: 75px;
   }
 }
 
@@ -77,6 +77,6 @@
   }
 
   .hwcta {
-    margin-top: -60px;
+    margin-top: 50px;
   }
 }
